Fix chat messages reply edit and delete